完成登录页面的设计及form验证

--- a/_Lib/Views/Account/login.html
+++ b/_Lib/Views/Account/login.html
@@ -26,7 +26,7 @@
             <div class="icon-lock"></div>
         </div>
         <h4>用户登录</h4>
-        <form id="loginForm" class="form-edit" autocomplete="off">
+        <form id="loginForm" method="post" class="form-edit" autocomplete="off">
             <div class="form-group">
                 <input class="form-control form-field" name="Username" data-type="text" type="text" required="required">
                 <label class="form-label">用户名</label>
