--- a/QrF.Sqlite.Demo/Views/Account/login.html
+++ b/QrF.Sqlite.Demo/Views/Account/login.html
@@ -15,7 +15,7 @@
     <title>QeF | 系统登录</title>
     <link href="../../content/css/animate.min.css" rel="stylesheet" />
     <link href="../../content/css/normalize.css" rel="stylesheet" />
-    <link href="../../content/css/styles.css" rel="stylesheet" />
+    <link href="../../content/css/login.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <!-- END HEAD -->
@@ -26,7 +26,7 @@
             <div class="icon-lock"></div>
         </div>
         <h4>用户登录</h4>
-        <form id="loginForm" class="form-edit" autocomplete="off">
+        <form id="loginForm" method="post" class="form-edit" autocomplete="off">
             <div class="form-group">
                 <input class="form-control form-field" name="Username" data-type="text" type="text" required="required">
                 <label class="form-label">用户名</label>
