--- a/_Lib/Views/Account/login.html
+++ b/_Lib/Views/Account/login.html
@@ -15,7 +15,7 @@
     <title>QeF | 系统登录</title>
     <link href="../../content/css/animate.min.css" rel="stylesheet" />
     <link href="../../content/css/normalize.css" rel="stylesheet" />
-    <link href="../../content/css/styles.css" rel="stylesheet" />
+    <link href="../../content/css/login.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <!-- END HEAD -->
