--- a/_Lib/Views/Account/login.html
+++ b/_Lib/Views/Account/login.html
@@ -1,22 +1,24 @@
 ﻿<!DOCTYPE html>
-<!--[if IE 8]> <html lang="zh-CN" class="ie8 no-js"> <![endif]-->
-<!--[if IE 9]> <html lang="zh-CN" class="ie9 no-js"> <![endif]-->
-<!--[if !IE]><!-->
-<html lang="zh-CN" class="no-js">
-<!--<![endif]-->
+<html lang="zh-CN">
 <!-- BEGIN HEAD -->
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta content="" name="description" />
-    <meta content="" name="author" />
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="description" content="" >
+    <meta name="keywords" content="">
+    <meta name="author" content="" >
     <title>QeF | 系统登录</title>
-    <link href="../../content/css/animate.min.css" rel="stylesheet" />
-    <link href="../../content/css/normalize.css" rel="stylesheet" />
-    <link href="../../content/css/login.css" rel="stylesheet" />
+    <!-- Favicons-->
     <link rel="shortcut icon" href="favicon.ico" />
+    <!-- CORE CSS-->
+    <link href="../../content/css/materialize.min.css" rel="stylesheet" />
+    <!-- Custome CSS-->
+    <link href="../../content/css/login.css" rel="stylesheet" />
+    <!-- INCLUDED LIB CSS ON PAGE -->
+    <link href="../../content/js/lib/sweetalert/sweetalert.css" rel="stylesheet" />
+    
 </head>
 <!-- END HEAD -->
 <!-- BEGIN BODY -->
