--- a/QrF.Sqlite.Nancy/Views/Home/index.html
+++ b/QrF.Sqlite.Nancy/Views/Home/index.html
@@ -32,20 +32,16 @@
         <div class="wrapper">
             <!-- START LEFT SIDEBAR NAV-->
             <aside id="left-sidebar-nav">
-                <ul id="slide-out" class="side-nav fixed leftside-navigation">
-                    <li>
-                        <!-- start header nav-->
-                        <div class="navbar-fixed">
-                            <nav class="navbar-color">
-                                <div class="nav-wrapper">
-                                    <ul class="left">
-                                        <li><h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1></li>
-                                    </ul>
-                                </div>
-                            </nav>
+                <!-- start header nav-->
+                <div class="side-nav fixed">
+                    <nav class="navbar-color">
+                        <div class="nav-wrapper">
+                            <h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="/content/images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1>
                         </div>
-                        <!-- end header nav-->
-                    </li>
+                    </nav>
+                </div>
+                <!-- end header nav-->
+                <ul id="slide-out" class="side-nav fixed leftside-navigation">
                     <li class="user-details cyan darken-2">
                         <div class="row">
                             <div class="col col s4 m4 l4">
