--- a/_Lib/Views/Home/index.html
+++ b/_Lib/Views/Home/index.html
@@ -15,6 +15,8 @@
     <!-- CORE CSS-->
     <link href="../../content/css/materialize.min.css" rel="stylesheet" />
     <link href="../../content/css/style.min.css" rel="stylesheet" />
+
+    <link href="../../content/css/customer.css" rel="stylesheet" />
     <!-- INCLUDED LIB CSS ON PAGE -->
     <link href="../../content/js/lib/sweetalert/sweetalert.css" rel="stylesheet" />
 </head>
@@ -35,8 +37,8 @@
                 <!-- start header nav-->
                 <div class="side-nav fixed">
                     <nav class="navbar-color">
-                        <div class="nav-wrapper">
-                            <h1 class="logo-wrapper"><a href="index.html" class="brand-logo darken-1"><img src="/content/images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1>
+                        <div class="nav-wrapper nav-small">
+                            <h1 class="logo-wrapper"><a href="homt/index.html" class="brand-logo darken-1"><img src="/content/images/materialize-logo.png" alt="materialize logo"></a> <span class="logo-text">Materialize</span></h1>
                         </div>
                     </nav>
                 </div>
