--- a/_Lib/Views/Home/index.html
+++ b/_Lib/Views/Home/index.html
@@ -52,41 +52,38 @@
                             <div class="col col s8 m8 l8">
                                 <ul id="profile-dropdown" class="dropdown-content">
                                     <li>
-                                        <a href="#"><i class="mdi-action-face-unlock"></i> Profile</a>
+                                        <a href="#"><i class="mdi-action-face-unlock"></i> 信息</a>
                                     </li>
                                     <li>
-                                        <a href="#"><i class="mdi-action-settings"></i> Settings</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="mdi-communication-live-help"></i> Help</a>
+                                        <a href="#"><i class="mdi-action-settings"></i> 设置</a>
                                     </li>
                                     <li class="divider"></li>
                                     <li>
-                                        <a href="#"><i class="mdi-action-lock-outline"></i> Lock</a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="mdi-hardware-keyboard-tab"></i> Logout</a>
+                                        <a href="#"><i class="mdi-hardware-keyboard-tab"></i> 注销</a>
                                     </li>
                                 </ul>
-                                <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn" href="#" data-activates="profile-dropdown">John Doe<i class="mdi-navigation-arrow-drop-down right"></i></a>
-                                <p class="user-roal">Administrator</p>
+                                <a class="btn-flat dropdown-button waves-effect waves-light white-text profile-btn" href="#" data-activates="profile-dropdown">管理员<i class="mdi-navigation-arrow-drop-down right"></i></a>
+                                <p class="user-roal">系统管理员</p>
                             </div>
                         </div>
                     </li>
                     <li class="bold">
-                        <a href="index.html" class="waves-effect waves-cyan"><i class="mdi-action-dashboard"></i> 首页</a>
+                        <a href="/" class="waves-effect waves-cyan"><i class="mdi-action-dashboard"></i> 首页</a>
                     </li>
                     <li class="no-padding">
                         <ul class="collapsible collapsible-accordion">
                             <li class="bold">
-                                <a class="collapsible-header waves-effect waves-cyan"><i class="mdi-action-view-carousel"></i> Layouts</a>
+                                <a class="collapsible-header waves-effect waves-cyan"><i class="mdi-action-view-carousel"></i> 系统管理</a>
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                            <a href="layout-fullscreen.html">Full Screen</a>
+                                            <a href="/sys/menu">菜单管理</a>
                                         </li>
                                         <li>
-                                            <a href="layout-horizontal-menu.html">Horizontal Menu</a>
+                                            <a href="layout-horizontal-menu.html">角色管理</a>
+                                        </li>
+                                        <li>
+                                            <a href="layout-horizontal-menu.html">用户管理</a>
                                         </li>
                                     </ul>
                                 </div>
