--- a/_Lib/Views/Sys/menu.html
+++ b/_Lib/Views/Sys/menu.html
@@ -127,7 +127,7 @@
                 <div class="container">
                     <div class="section">
                         <div class="row">
-                            <form class="col s12">
+                            <form class="col s12 query_form">
                                 <div class="row">
                                     <div class="input-field col s4">
                                         <select>
