--- a/QrF.Sqlite.Nancy/content/css/customer.css
+++ b/QrF.Sqlite.Nancy/content/css/customer.css
@@ -1,3 +1,10 @@
 .nav-small {
     padding-top: 12px;
 }
+.margin-right-5{
+    margin-right:5px;
+}
+.pagination-detail{
+    padding-left:10px;
+    padding-right:10px;
+}
