--- a/_Lib/Views/Home/index.html
+++ b/_Lib/Views/Home/index.html
@@ -73,17 +73,17 @@
                     <li class="no-padding">
                         <ul class="collapsible collapsible-accordion">
                             <li class="bold">
-                                <a class="collapsible-header waves-effect waves-cyan"><i class="mdi-action-view-carousel"></i> 系统管理</a>
+                                <a class="collapsible-header waves-effect waves-cyan"><i class="mdi-action-settings"></i> 系统管理</a>
                                 <div class="collapsible-body">
                                     <ul>
                                         <li>
-                                            <a href="/sys/menu">菜单管理</a>
+                                            <a href="/sys/menu"><i class="mdi-navigation-menu"></i> 菜单管理</a>
                                         </li>
                                         <li>
-                                            <a href="layout-horizontal-menu.html">角色管理</a>
+                                            <a href="/sys/role"><i class="mdi-social-group"></i> 角色管理</a>
                                         </li>
                                         <li>
-                                            <a href="layout-horizontal-menu.html">用户管理</a>
+                                            <a href="/sys/user"><i class="mdi-social-person"></i> 用户管理</a>
                                         </li>
                                     </ul>
                                 </div>
